tests/negative/regression/r12.orng
// r12.orng:9:18: error: error: expected a compile-time constant type, got negate
//     if const x: -x; true {}
//                 ^
// r12.orng:9:7: error: expected a value of type `Int`
//     if const x: -x; true {}
//      ^
// 
fn main() -> Int { 
    if const x: -x; true {}
}